# appbasics

./: .gitignore  README.md  pyproject.toml
src/python/dbtools/: crud.py  query.py
src/python/dtypes/: check.py
tests/: checkTypes.py  test_query.py
