[project]
name = "AppBasics"
version = "v0.0.0"
authors = [
    { "Takanori Kono", "takanori.kono@gmail.com" }
]
description = "Basic tools for developing applications"
readme = "README.md"
dependencies = [
    "typer",
    "build",
    "twine"
]
[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/appbasics" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
pythonpath = [ "src" ]
filterwarnings = [ "ignore::deprecationWarning" ]
